--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>Welcome to Luminara, your source of illumination!</p>
+            <p>Welcome to Luminara, your source of illumination with roblox Exploits!</p>
         </section>
 
         <section id="about">
             <h2>About Us</h2>
-            <p>Luminara is dedicated to providing the best lighting solutions for all your needs.</p>
+            <p>Luminara is dedicated to providing the best Roblox Executor out their with not a huge amount of bugs/glitches!</p>
         </section>
 
         <section id="services">
             <h2>Our Services</h2>
-            <p>We offer a wide range of services to meet your lighting needs, including installations, repairs, and custom designs.</p>
+            <p>We offer a wide range of services to meet your Exploting needs, including save script hub, quick launch, and custom designs.</p>
         </section>
 
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>If you have any questions or would like to learn more about our services, please <a href="mailto:info@luminara.com">contact us</a>.</p>
+            <p>If you have any questions or would like to learn more about our services, please <a href="mailto:bluestripz963@gmail.com">contact us</a>.</p>
         </section>
     </main>
 
