--- a/index.html
+++ b/index.html
@@ -9,35 +9,36 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #121212;
+            color: #ffffff;
         }
         header {
-            background-color: #333;
-            color: white;
+            background-color: #1c1c1c;
+            color: #ff4444;
             padding: 10px 0;
             text-align: center;
         }
         nav {
-            background-color: #444;
+            background-color: #282828;
             overflow: hidden;
         }
         nav a {
             float: left;
             display: block;
-            color: white;
+            color: #ffffff;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
         }
         nav a:hover {
-            background-color: #555;
+            background-color: #3d3d3d;
         }
         main {
             padding: 20px;
         }
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #1c1c1c;
+            color: #ff4444;
             text-align: center;
             padding: 10px 0;
             position: fixed;
@@ -48,14 +49,14 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Luminara</h1>
+        <h1>🎅Welcome to Luminara !🎄</h1>
     </header>
 
     <nav>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="services.html">Services</a>
+        <a href="contact.html">Contact</a>
     </nav>
 
     <main>
@@ -63,25 +64,10 @@
             <h2>Home</h2>
             <p>Welcome to Luminara, your source of illumination with roblox Exploits!</p>
         </section>
-
-        <section id="about">
-            <h2>About Us</h2>
-            <p>Luminara is dedicated to providing the best Roblox Executor out their with not a huge amount of bugs/glitches!</p>
-        </section>
-
-        <section id="services">
-            <h2>Our Services</h2>
-            <p>We offer a wide range of services to meet your Exploting needs, including save script hub, quick launch, and custom designs.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>If you have any questions or would like to learn more about our services, please <a href="mailto:bluestripz963@gmail.com">contact us</a>.</p>
-        </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Luminara. All rights reserved.</p>
+        <p>&copy; 2025 Luminara. All rights reserved.</p>
     </footer>
 </body>
 </html>
