--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>Welcome to Luminara, your source of illumination with roblox Exploits!</p>
+            <p>Welcome to Luminara, your source of illumination with Roblox Exploits!</p>
+            <p>If you are interested in downloading our executor, click the link --> <a href="https://test.com" style="color: #ff4444;">https://test.com</a></p>
         </section>
     </main>
 
