--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             <h2>Home</h2>
             <p>Welcome to Luminara, your source of illumination with Roblox Exploits!</p>
             <p>If you are interested in downloading our executor, click the link --> <a href="https://test.com" style="color: #ff4444;">https://test.com</a></p>
-        </section>
+           <p>Note: Our executor is key free, so you dont need to worry about spending 5-10 mintues for a key that lastest 24-48hrs :)</p>
+       </section>
     </main>
 
     <footer>
