--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,9 @@
     <main>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>If you have any questions or would like to learn more about our services, please <a href="bluestripz963@gmail.com">contact us</a>.</p>
+            <p>If you have any questions or would like to learn more about our services, please <a href="mailto:bluestripz963@gmail.com">contact us</a>.</p>
+            <p>If you want to join our Discord server, <a href="https://discord.gg/47vHq6ukrb" target="_blank">click here</a>.</p>
+            <p> **IF THE DISCORD INVITE DOESNT WORK EMAIL US**</p>
         </section>
     </main>
 
