--- a/index.html
+++ b/index.html
@@ -3,49 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./public/favicon.png">
     <title>Luminara</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #121212;
-            color: #ffffff;
-        }
-        header {
-            background-color: #1c1c1c;
-            color: #ff4444;
-            padding: 10px 0;
-            text-align: center;
-        }
-        nav {
-            background-color: #282828;
-            overflow: hidden;
-        }
-        nav a {
-            float: left;
-            display: block;
-            color: #ffffff;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        nav a:hover {
-            background-color: #3d3d3d;
-        }
-        main {
-            padding: 20px;
-        }
-        footer {
-            background-color: #1c1c1c;
-            color: #ff4444;
-            text-align: center;
-            padding: 10px 0;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -53,10 +13,10 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="services.html">Services</a>
-        <a href="contact.html">Contact</a>
+        <a href="/">Home</a>
+        <a href="./about/">About</a>
+        <a href="./services/">Services</a>
+        <a href="./contact/">Contact</a>
     </nav>
 
     <main>
