--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <nav>
-        <a href="/">Home</a>
+        <a href="./">Home</a>
         <a href="./about/">About</a>
         <a href="./services/">Services</a>
         <a href="./contact/">Contact</a>
