--- a/developers/developers.html
+++ b/developers/developers.html
@@ -21,29 +21,29 @@
     <main>
         <section>
             <h2>Our Team</h2>
-            <p>We are a passionate group of developers dedicated to bringing you the best experience with Luminara. Our team consists of experts in various fields of web development, working together to create an innovative and user-friendly platform.</p>
+            <p>We are a passionate group of developers dedicated to bringing you the best experience with Luminara. Our team consists of experts in various fields of Roblox Exploting, working together to create an innovative and user-friendly communnity.</p>
         </section>
 
         <section>
             <h2>Meet the Developers</h2>
             <div class="developer">
-                <h3>Developer 1</h3>
-                <p>Bio and role of Developer 1.</p>
+                <h3>! Beamed </h3>
+                <p>HTML Developer/ Website - CO Owner</p>
             </div>
             <div class="developer">
-                <h3>Developer 2</h3>
-                <p>Bio and role of Developer 2.</p>
+                <h3>Lysa</h3>
+                <p>C++ Developer/ Executor - Owner</p>
             </div>
             <div class="developer">
-                <h3>Developer 3</h3>
-                <p>Bio and role of Developer 3.</p>
+                <h3>Velocity</h3>
+                <p>C ++ Developer/ Executor - Cheif of Operation</p>
             </div>
             <!-- Add more developers as needed -->
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Luminara. All rights reserved.</p>
+        <p>&copy; 2025 Luminara. All rights reserved.</p>
     </footer>
 </body>
 </html>
