--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="./about/">About</a>
         <a href="./services/">Services</a>
         <a href="./contact/">Contact</a>
+        <a href="./developers/">Developers</a>
     </nav>
 
     <main>
