--- a/developers/index.html
+++ b/developers/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About the Developers - Luminara</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../public/favicon.png">
+    <title>About - Luminara</title>
 </head>
 <body>
     <header>
-        <h1>About the Developers</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="features.html">Features</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>About Us</h1>
     </header>
+
+    <nav>
+        <a href="../">Home</a>
+        <a href="../about/">About</a>
+        <a href="../services/">Services</a>
+        <a href="../contact/">Contact</a>
+        <a href="../developers/">Developers</a>
+    </nav>
 
     <main>
         <section>
