pushing a fix for developers page

--- a/developers/index.html
+++ b/developers/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About the Developers - Luminara</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/public/favicon.png">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
         <h1>About the Developers</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="features.html">Features</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/features">Features</a></li>
+                <li><a href="/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
