--- a/developers/index.html
+++ b/developers/index.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About the Developers - Luminara</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <header>
-        <h1>About the Developers</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="features.html">Features</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <h1>Developers:</h1>
     </header>
 
     <nav>
@@ -46,7 +39,6 @@
                 <h3>Velocity</h3>
                 <p>C ++ Developer/ Executor - Cheif of Operation</p>
             </div>
-            <!-- Add more developers as needed -->
         </section>
     </main>
 
